# hgraph

./: README.md  hgraph.cabal
Data/: HApply.hs  HGraph.hs  HList.hs
Data/HGraph/: Class.hs  Graph.hs  HCons.hs
Data/HList/: Private.hs
