Name:               hgraph
Version:            0.0.2
License:            GPL-3
License-file:       COPYING
Author:             Matthew Peddie
Maintainer:         Matthew Peddie <peddie@alum.mit.edu>
Category:           Data
Synopsis:           Heterogeneous, statically typed graphs and lists

Description:        Heterogeneous, fully statically typed directed 
                    graphs and lists
                    
Homepage:

build-type:         Simple
cabal-version:      >= 1.8

extra-source-files: 
data-files:         

tested-with:        GHC == 7.4.1

source-repository head
  type: git
  location: git://github.com/peddie/hgraph.got

Library
  build-depends: base == 4.*, syb == 0.3.*

  exposed-modules: Data.HList
                   , Data.HApply
                   , Data.HGraph
                   , Data.HGraph.HCons
                   , Data.HGraph.Graph
  other-modules: Data.HList.Private
  ghc-options: -O2 

